# forge

./: Cargo.toml  README.md  forge.default.yaml  forge.schema.json  forge.yaml  workflow_schema.json
crates/forge_app/: Cargo.toml
crates/forge_app/src/: agent.rs  agent_executor.rs  app.rs  app_config.rs  authenticator.rs  compact.rs  compaction.rs  error.rs  execution_result.rs  fmt_input.rs  fmt_output.rs  front_matter.rs  input_title.rs  lib.rs  mcp_executor.rs  operation.rs  orch.rs  retry.rs  services.rs  template.rs  tool_executor.rs  tool_output.rs  tool_registry.rs  truncation.rs  user.rs  utils.rs
crates/forge_app/src/fmt/: content.rs  fmt_input.rs  fmt_output.rs  fmt_task.rs  mod.rs
crates/forge_app/src/snapshots/: forge_app__execution_result__tests__follow_up_no_question.snap  forge_app__execution_result__tests__follow_up_with_question.snap  forge_app__execution_result__tests__fs_create_basic.snap  forge_app__execution_result__tests__fs_create_overwrite.snap  forge_app__execution_result__tests__fs_create_with_warning.snap  forge_app__execution_result__tests__fs_patch_basic.snap  forge_app__execution_result__tests__fs_patch_with_warning.snap  forge_app__execution_result__tests__fs_read_basic.snap  forge_app__execution_result__tests__fs_read_basic_special_chars.snap  forge_app__execution_result__tests__fs_read_with_explicit_range.snap  forge_app__execution_result__tests__fs_read_with_truncation_path.snap  forge_app__execution_result__tests__fs_remove_not_found.snap  forge_app__execution_result__tests__fs_remove_success.snap  forge_app__execution_result__tests__fs_search_max_output.snap  forge_app__execution_result__tests__fs_search_no_matches.snap  forge_app__execution_result__tests__fs_search_no_results.snap  forge_app__execution_result__tests__fs_search_output.snap  forge_app__execution_result__tests__fs_search_with_results.snap  forge_app__execution_result__tests__fs_undo_file_created.snap  forge_app__execution_result__tests__fs_undo_file_removed.snap  forge_app__execution_result__tests__fs_undo_file_restored.snap  forge_app__execution_result__tests__fs_undo_no_changes.snap  forge_app__execution_result__tests__fs_undo_success.snap  (+35 more)
crates/forge_main_neo/: Cargo.toml
crates/forge_main_neo/src/: entrypoint.rs  event_reader.rs  executor.rs  lib.rs  run.rs
crates/forge_main_neo/src/domain/: action.rs  (+11 more)
(+329 files in other folders)
